Bug 155791 - export of default impress slide master to svg fails with General Error
Summary: export of default impress slide master to svg fails with General Error
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: filter:svg
Depends on:
Blocks: Master-Slide SVG-Save
  Show dependency treegraph
 
Reported: 2023-06-12 14:24 UTC by Caolán McNamara
Modified: 2024-06-19 05:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2023-06-12 14:24:47 UTC
Description:
can't export a selected the default master slide to svg

Steps to Reproduce:
1. launch impress
2. view, master slide
3. ctrl+a to select all
4. right click on one of the boundary squares
5. select svg as the filter
6. enter a name and export

Actual Results:
"Error saving the document: whatever.svg. General error..."

Expected Results:
successful svg export


Reproducible: Always


User Profile Reset: No

Additional Info:
seems to have always been like this
Comment 1 Caolán McNamara 2023-06-12 14:37:07 UTC
https://gerrit.libreoffice.org/c/core/+/152902 fixes this for me
Comment 2 Commit Notification 2023-06-12 16:21:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/061d6a280d17d18012a2f53e9870b5b2715bcef0

Resolves: tdf#155791 export of default impress slide master to svg failed

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-06-13 21:21:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/dc95aef10db94682b4d149fb125df7fe4d4d2349

Resolves: tdf#155791 export of default impress slide master to svg failed

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 stragu 2024-06-19 02:03:28 UTC
Reproduced in 7.5.9, fix verified in:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6f4adc1274cfac30b9097411bb193bd4386969f0
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3