Resolves: tdf#155791 export of default impress slide master to svg failed

Change-Id: Ie4ec64fef6d8c2c2844a01d06109ad9022714c11
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152902
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>